# pdf-img-chatbot

./: README.md  pyproject.toml
app/: main.py
pdf_img_chatbot/: chatbot.py
pdf_img_chatbot/documents_loader/: unstructured.py
pdf_img_chatbot/models/: olllama.py
pdf_img_chatbot/prompts/: rag.py
pdf_img_chatbot/vector_db/: qdrant.py
